--- a/app/src/main/res/layout/activity_lista_rsv.xml
+++ b/app/src/main/res/layout/activity_lista_rsv.xml
@@ -48,10 +48,11 @@
 
         <Switch
             android:id="@+id/sw_Listar_rsv"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="16dp"
-            android:text="Pendientes" />
+            android:text="Mostrar pendientes" />
 
         <FrameLayout
             android:layout_width="match_parent"
