--- a/app/src/main/res/layout/activity_lista_rsv_adm.xml
+++ b/app/src/main/res/layout/activity_lista_rsv_adm.xml
@@ -63,20 +63,27 @@
             android:text="Selecciona una cancha:"
             android:textSize="20sp" />
 
-        <Spinner
-            android:id="@+id/spnListar_Rsv_ADM"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="10dp"
-            android:minHeight="48dp" />
+            android:background="@color/white">
+
+            <Spinner
+                android:id="@+id/spnListar_Rsv_ADM"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="10dp"
+                android:minHeight="48dp" />
+        </FrameLayout>
 
         <Switch
             android:id="@+id/sw_Listar_rsv_adm"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="16dp"
-            android:text="Pendientes" />
+            android:text="Mostrar pendientes" />
 
         <FrameLayout
             android:layout_width="match_parent"
