--- a/app/src/main/res/layout/activity_carga.xml
+++ b/app/src/main/res/layout/activity_carga.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".actividades.actividades.CargaActivity">
+    tools:context=".actividades.actividades.Carga_Activity">
 
     <LinearLayout
         android:layout_width="match_parent"
