--- a/app/src/main/res/layout/activity_terminos.xml
+++ b/app/src/main/res/layout/activity_terminos.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo1"
-    tools:context=".actividades.actividades.usuario.TerminosActivity">
+    tools:context=".actividades.actividades.Terminos_Activity">
 
     <LinearLayout
         android:layout_width="match_parent"
