--- a/app/src/main/res/layout/activity_lista_rsv.xml
+++ b/app/src/main/res/layout/activity_lista_rsv.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Mis Reservas"
+            android:text="Reservas"
             android:textAlignment="center"
             android:textColor="@color/hyperlink"
             android:textSize="34sp"
