--- a/app/src/main/res/layout/activity_recuperar_password.xml
+++ b/app/src/main/res/layout/activity_recuperar_password.xml
@@ -7,71 +7,79 @@
     android:background="@drawable/fondo1"
     tools:context=".actividades.actividades.usuario.RecuperarPassword_Activity">
 
-    <Button
-        android:id="@+id/btnConfirmar_RecupPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="21dp"
-        app:cornerRadius="20dp"
-        android:backgroundTint="@color/btnRegOrange"
-        android:text="CONFIRMAR"
-        app:layout_constraintEnd_toStartOf="@+id/btnSalir_RecupPass"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPass2_RecupPass" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/btnSalir_RecupPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="36dp"
-        android:backgroundTint="@color/btnRegOrange"
-        android:text="Volver"
-        app:cornerRadius="20dp"
-        app:layout_constraintStart_toEndOf="@+id/btnConfirmar_RecupPass"
-        app:layout_constraintTop_toBottomOf="@+id/txtPass2_RecupPass" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="25dp"
+            android:hint="@string/recTitPassword"
+            android:textColor="@color/white"
+            android:textColorHint="#E3DB9C"
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/txtPass1_RecupPass"
-        android:layout_width="241dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="88dp"
-        android:ems="10"
-        android:textColorHint="@color/white"
-        android:hint="@string/recTxtNuevaPassword"
-        android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent" />
+        <EditText
+            android:id="@+id/txtPass1_RecupPass"
+            android:layout_width="241dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="88dp"
+            android:layout_marginTop="88dp"
+            android:ems="10"
+            android:hint="@string/recTxtNuevaPassword"
+            android:inputType="textPassword"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
-    <EditText
-        android:id="@+id/txtPass2_RecupPass"
-        android:layout_width="239dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:textColorHint="@color/white"
-        android:hint="@string/recTxtRepitaPassword"
-        android:inputType="textPassword"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPass1_RecupPass" />
+        <EditText
+            android:id="@+id/txtPass2_RecupPass"
+            android:layout_width="239dp"
+            android:layout_height="57dp"
+            android:layout_marginStart="88dp"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:hint="@string/recTxtRepitaPassword"
+            android:inputType="textPassword"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="238dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="25dp"
-        android:textColorHint="#E3DB9C"
-        android:hint="@string/recTitPassword"
-        android:textSize="25dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnSalir_RecupPass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="36dp"
+                android:backgroundTint="@color/btnRegOrange"
+                android:text="Volver"
+                app:cornerRadius="20dp" />
+
+            <Button
+                android:id="@+id/btnConfirmar_RecupPass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="76dp"
+                android:layout_marginTop="36dp"
+                android:layout_marginEnd="21dp"
+                android:backgroundTint="@color/btnRegOrange"
+                android:text="CONFIRMAR"
+                app:cornerRadius="20dp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
